--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 	<head>
 	<title>SafeFrame Testing for Creative</title>
-	
-	<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" />
+
+	<link rel="stylesheet" type="text/css" href="/src/css/bootstrap.min.css" />
 	<style type="text/css">
 
-	
+
 	</style>
 	</head>
 	<body>
-<nav>	
+<nav>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -25,7 +25,7 @@
         <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li ><a href="https://sourceforge.net/p/safeframes/wiki/Home/" title="SafeFrame Reference Implementation">SafeFrame Project</a></li>
-			<li><a target="_blank" href="http://www.iab.net/media/file/SafeFramesSpec.pdf">SafeFrame Specification <sub>(PDF)</sub></a></li>  
+			<li><a target="_blank" href="http://www.iab.net/media/file/SafeFramesSpec.pdf">SafeFrame Specification <sub>(PDF)</sub></a></li>
             <li><a target="_blank" href="http://www.iab.net/safeframe">IAB</a></li>
             <li><a href="https://sourceforge.net/projects/safeframes/files/latest/download?source=files">Download</a></li>
 		</ul>
@@ -59,7 +59,7 @@
           <h2>Creative Test Tool</h2>
           <p>
 		  The Creative Test Tool allows you to paste HTML or Javascript from your creative and test its rendering inside a SafeFrame.
-		  There are several example ads showing usage of different features of SafeFrame.  
+		  There are several example ads showing usage of different features of SafeFrame.
 		  The tool will also generate the publisher SafeFrame tags or Javascript to deliver your ad.
 		  </p>
           <p><a class="btn btn-default"  href="./creative_test.html" role="button">Go to the Test Tool &raquo;</a></p>
