--- a/creative_test.html
+++ b/creative_test.html
@@ -3,7 +3,7 @@
 	<head>
 	<title>SafeFrame Testing for Creative</title>
 
-	<link rel="stylesheet" type="text/css" href="/src/css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="/src/css/bootstrap-combined.min.css" />
 	<style type="text/css">
 	.padtop {
 		margin-top: 50px;
@@ -260,9 +260,9 @@ Quisque pulvinar lacus libero, vel mattis ligula lacinia vel. Etiam eu luctus se
 <!-- ======================================  END SAMPLE PAGE ==================================== -->
 
 
-		<script type="text/javascript" src="http://s3-us-west-2.amazonaws.com/sftemp/sf_v1.0.1/js/lib/base.js"></script>
-		<script type="text/javascript" src="http://s3-us-west-2.amazonaws.com/sftemp/sf_v1.0.1/js/host/host.js"></script>
-		<script type="text/javascript" src="http://s3-us-west-2.amazonaws.com/sftemp/sf_v1.0.1/js/lib/boot.js"></script>
+		<script type="text/javascript" src="/src/js/lib/base.js"></script>
+		<script type="text/javascript" src="/src/js/host/host.js"></script>
+		<script type="text/javascript" src="/src/js/lib/boot.js"></script>
 
 		<!-- Script code to handle code-based rendering -->
 	<script type="text/javascript">
