--- a/creative_test.html
+++ b/creative_test.html
@@ -606,7 +606,7 @@ Quisque pulvinar lacus libero, vel mattis ligula lacinia vel. Etiam eu luctus se
 
 		function initSafeFrameConfig() {
 			var conf	= new $sf.host.Config({
-				renderFile:		"http://s3-us-west-2.amazonaws.com/sftemp/sf_v1.0.1/html/r.html",
+				renderFile:		"https://safeframe.vercel.app/src/html/r.html",
 				positions:
 				{
 					"LREC":
@@ -671,7 +671,7 @@ Quisque pulvinar lacus libero, vel mattis ligula lacinia vel. Etiam eu luctus se
 	(function() {
 		var conf	= new $sf.host.Config({
 			// Should be absolute path to render file hosted on CDN
-			renderFile:		"http://s3-us-west-2.amazonaws.com/sftemp/sf_v1.0.1/html/r.html",
+			renderFile:		"https://safeframe.vercel.app/src/html/r.html",
 			positions: {}
 		});
 
